# Sysprog2017

./: .cproject  .gitignore  .travis.yml  AllTests.cpp  CMakeLists.txt  README.md  _makefile  a.out  main.cpp  mainTest.cpp  makefile  readme.txt  run-test.sh
.metadata/.plugins/org.eclipse.core.resources/.safetable/: org.eclipse.core.resources
.metadata/.plugins/org.eclipse.ui.workbench/: workbench.xml  workingsets.xml
Automat/: CMakeLists.txt  _makefile  makefile
Automat/debug/: AutomatTest
Automat/includes/: Automat.h  Position.h  Stack.h  Syntax.h
Automat/src/: Automat.cpp  Position.cpp  Stack.cpp  Syntax.cpp  TestAutomat.cpp
Buffer/: CMakeLists.txt  _makefile  buffer1  makefile  qute
Buffer/debug/: BufferTest  input1.txt
Buffer/includes/: Buffer.h
Buffer/src/: Buffer.cpp  TestBuffer.cpp  a.out
CatchLib/: CMakeLists.txt
Compab/: CMakeLists.txt
Compab/includes/: compab.hpp
Compatibility/: CMakeLists.txt  compab.h
Compatibility/includes/: compab.h
Compatibility/src/: compab.cpp
Default/: makefile  sources.mk
Default/.metadata/.plugins/org.eclipse.cdt.make.core/: subdir.mk
Default/Automat/src/: subdir.mk
Default/Buffer/src/: subdir.mk
Default/Parser/src/: ParseTree.d  subdir.mk
Default/Scanner/src/: Information.d  Scanner.d  TestScanner.d  Token.d  subdir.mk
Default/Symboltable/src/: StringTab.d  Symboltable.d  SymtabEntry.d  TestStringTab.d  TestSymboltable.d  subdir.mk
Parser/: CMakeLists.txt  _makefile  makefile
Parser/includes/: Errors.h  Node.h  ParseTree.h  Parser.h  TokenSequence.h  TokenTypeRegistry.h
Parser/src/: Errors.cpp  Node.cpp  ParseTree.cpp  Parser.cpp  ParserExe.cpp  ParserTest.cpp  TestParser.cpp  TokenSequence.cpp  TokenTypeRegistry.cpp
PossibleTemplates/: ParseTree_h.txt
Scanner/: CMakeLists.txt  _makefile  makefile  output.txt  scan1  scanner6.txt  scanner62.txt
Scanner/debug/: ScannerTest  scan1
Scanner/includes/: Information.h  Position.h  Scanner.h  Token.h  TokenTypeRegistry.h
Scanner/src/: Information.cpp  Scanner.cpp  ScannerExe.cpp  TestScanner.cpp  Token.cpp  TokenTypeRegistry.cpp  a.out
Symboltable/: CMakeLists.txt  _makefile  makefile
Symboltable/debug/: SymboltableTest
Symboltable/includes/: StringTab.h  Symboltable.h  SymtabEntry.h
Symboltable/src/: StringTab.cpp  Symboltable.cpp  SymtabEntry.cpp  TestStringTab.cpp  TestSymboltable.cpp  a.out
docs/: parserdoc
gtest/: CMakeLists.txt  README.md
gtest/scripts/: fuse_gtest_files.py  release_docs.py
scanner_generic_test/: scanner1.txt  scanner2.txt  scanner5.txt  scanner9.txt
test/: command.txt  easy2.txt  easy3.txt  output.txt  p0.txt  p1Test.txt  p2Test.txt  p3Test.txt  p4Test.txt  p5Test.txt  p6Test.txt  p7Test.txt  p8Test.txt  parser0.txt  parser1.txt  parser2.txt  parser3.txt  parser4.txt  parser5.txt  scanner0.txt  scanner1.txt  scanner2.txt  scanner3.txt  scanner5.txt  scanner6.txt  scanner7.txt  short.txt
test/generic/: scanner0.txt  scanner0_standart.txt  scanner1.txt  scanner2.txt  scanner3.txt  scanner4.txt  scanner5.txt  scanner6.txt  scanner7.txt  scanner9.txt
test2/: p1Test.txt  p2Test.txt  p3Test.txt  p5Test.txt  p6Test.txt  p7Test.txt  p8Test.txt
